--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abbyrchen.github.io/pui-hw3",
+  "homepage": "https://abbyrchen.github.io/pui-hw3/",
   "name": "pui-hw3",
   "version": "0.1.0",
   "private": true,
